--- a/app/views/moj-design-system.html
+++ b/app/views/moj-design-system.html
@@ -12,37 +12,8 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl">{{ pageName }}</h1>
+      <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      {% set bannerHtml %}
-        <h2 class="govuk-heading-m">This service will be unavailable from 1 June 2019</h2>
-      {% endset %}
-
-      {{ mojBanner({
-        type: 'information',
-        html: bannerHtml
-      }) }}
-
-      {{ mojPageHeaderActions({
-        heading: {
-          text: 'Documents'
-        },
-        items: [{
-          text: 'Upload new',
-          classes: 'govuk-button--secondary'
-        }, {
-          text: 'Share collection',
-          classes: 'govuk-button--secondary'
-        },
-        {
-          text: 'Share collection',
-          classes: 'govuk-button--secondary'
-        },
-        {
-          text: 'Share collection',
-          classes: 'govuk-button--secondary'
-        }]
-      }) }}
 
       {{ mojSubNavigation({
         label: 'Sub navigation',
@@ -64,7 +35,7 @@
           {
             text: "First action",
             href: "#",
-            classes: "govuk-button--secondary"
+            classes: "govuk-button"
           },
           {
             text: "Second action",
@@ -78,27 +49,6 @@
           }
         ]
       }) }}
-
-      <div style="float: right;">
-        <div class="moj-button-menu">
-          <div class="moj-button-menu__wrapper">
-        
-            <a href="#" role="button" draggable="false" class="govuk-button moj-button-menu__item govuk-button--secondary " data-module="govuk-button">
-              First action
-            </a>
-        
-            <a href="#" role="button" draggable="false" class="govuk-button moj-button-menu__item govuk-button--secondary " data-module="govuk-button">
-              Second action
-            </a>
-        
-            <a href="#" role="button" draggable="false" class="govuk-button moj-button-menu__item govuk-button--secondary " data-module="govuk-button">
-              Third action
-            </a>
-        
-          </div>
-        </div>
-        
-      </div>
 
       
     </div>
