--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,7 +8,7 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <p><a href="/account/sign-in">Go to first page of prototype</a></p>
+      <p><a href="./create-account/defendant-type">Go to first page of prototype</a></p>
       <p><a href="/moj-design-system">MoJ Design System</a></p>
     </div>
   </div>
