--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -6,7 +6,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 {% extends "govuk-prototype-kit/layouts/govuk-branded.njk" %}
 
 {% block header %}
-<!-- {{ mojHeader({
+{{ mojHeader({
     navigationClasses: 'govuk-page-width',
     organisationLabel: {
       text: 'HMCTS',
@@ -23,9 +23,9 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
         href: '#'
       }]
     }
-  }) }} -->
-
-  {{ govukHeader({
-    homepageUrl: "#"
   }) }}
+
+  <!-- {{ govukHeader({
+    homepageUrl: "#"
+  }) }} -->
 {% endblock %}
