--- a/app/views/create-account/defendant-contact-details.html
+++ b/app/views/create-account/defendant-contact-details.html
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <form method="post" novalidate action="parent-details">
+      <form method="post" novalidate action="employer">
 
         <!-- EMAILS -->
         
