--- a/app/views/create-account/parent-details.html
+++ b/app/views/create-account/parent-details.html
@@ -4,7 +4,7 @@
 
 {% block beforeContent %}
 
-<a href="./defendant-contact-details.html" class="govuk-back-link">Back</a>
+<a href="./employer.html" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
