--- a/app/views/create-account/end.html
+++ b/app/views/create-account/end.html
@@ -1,15 +1,20 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Prototype" %}
+{% set pageName = "End of prototype" %}
+
+{% block beforeContent %}
+
+<a href="javascript:window.history.back()" class="govuk-back-link">Back</a>
+
+{% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
+      <p class="govuk-body-l">Thank you.</p>
 
-      <p><a href="./create-account/defendant-type">Go to first page of prototype</a></p>
-      <!-- <p><a href="/moj-design-system">MoJ Design System</a></p> -->
     </div>
   </div>
 
