--- a/app/views/create-account/defendant-details.html
+++ b/app/views/create-account/defendant-details.html
@@ -300,8 +300,30 @@
 
         <!-- VEHICLE DETAILS -->
 
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+        <h2 class="govuk-heading-m">Vehicle details</h2>
 
+        {{ govukInput({
+          label: {
+            text: "Make of the car (optional)",
+            classes: "govuk-label--s"
+          },
+          id: "carMake",
+          name: "carMake",
+          value: data['carMake']
+        }) }}
+
+        {{ govukInput({
+          label: {
+            text: "Registration number (optional)",
+            classes: "govuk-label--s"
+          },
+          classes: "govuk-input--width-10",
+          id: "carRegistration",
+          name: "carRegistration",
+          value: data['carRegistration']
+        }) }}
 
 
 
