--- a/app/views/create-account/individual-details.html
+++ b/app/views/create-account/individual-details.html
@@ -16,7 +16,7 @@
       <h2 class="govuk-heading-m">Personal details</h2>
 
 
-      <form method="post" novalidate action="defendant-contact-details">
+      <form method="post" novalidate action="contact-details">
 
         <!-- TITLE -->
         <div>
