--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -10,11 +10,11 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
     navigationClasses: 'govuk-page-width',
     organisationLabel: {
       text: 'HMCTS',
-      href: './index.html'
+      href: '../index.html'
     },
     serviceLabel: {
-      text: 'OPAL',
-      href: './index.html'
+      text: 'Opal',
+      href: '../index.html'
     },
     navigation: {
       label: 'Account navigation',
@@ -23,7 +23,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
         href: '#'
       }]
     }
-  }) }}
+}) }}
 
   <!-- {{ govukHeader({
     homepageUrl: "#"
