--- a/app/views/create-account/defendant-type.html
+++ b/app/views/create-account/defendant-type.html
@@ -14,20 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
       <!-- <h1 class="govuk-heading-l">{{ pageName }}</h1> -->
 
-      <form method="post" novalidate action="defendant-details">
-
-        {% set companyHTML %}
-        {{ govukInput({
-          id: "company-name",
-          name: "companyName",
-          type: "text",
-          value: data['companyName'],
-          label: {
-            text: "Company name",
-            classes: "govuk-label--s"
-          }
-        }) }}
-        {% endset -%}
+      <form method="post" novalidate action="/defendant-type-question">
 
         {{ govukRadios({
           name: "defendantType",
@@ -50,10 +37,7 @@
             },
             {
               value: "defendant-company",
-              text: "Company",
-              conditional: {
-                html: companyHTML
-              }
+              text: "Company"
             }
           ]
         }) }}
