--- a/app/views/create-account/end.html
+++ b/app/views/create-account/end.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
-      <p class="govuk-body-l">Thank you.</p>
+      <p class="govuk-body"><a class="govuk-link govuk-link--no-visited-state" href="/manage-prototype/clear-data">Clear data and start again</a></p>
 
     </div>
   </div>
