lja-code added to home screen

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,7 +8,9 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <p><a href="./create-account/defendant-type">Go to first page of prototype</a></p>
+      <p class="govuk-body"><a href="./create-account/defendant-type" class="govuk-link--no-visited-state">Go to first page of prototype</a></p>
+      <p class="govuk-body"><a href="./create-account/lja-code.html" class="govuk-link--no-visited-state">LJA code example</a></p>
+
       <!-- <p><a href="/moj-design-system">MoJ Design System</a></p> -->
     </div>
   </div>
